--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="hero-box">
-            <img class="hero-img" src="images/tesla-cybertruck-concept-cars-3840x2400-882 (1).webp"
+            <img class="hero-img" src="images/tesla-cybertruck-concept-cars-3840x2400-882.webp"
                 alt="A tesla cybertruck">
             <h2 class="hero-text">Join the Electric Revolution: Driving Towards a Greener Future!</h2>
             <button class="join-butt"><a href="#">Join Us</a></button>
@@ -69,31 +69,31 @@
 
         <div class="ev-section">
             <div class="ev-box">
-                <img src="images/Tesla model Y.webp" alt="Tesla Model Y">
+                <img src="images/Tesla_model_Y.webp" alt="Tesla Model Y">
                 <h3>Name: Tesla Model Y</h3>
                 <p>Year Of Release: 2020</p>
                 <p>Range: 330-miles</p>
             </div>
             <div class="ev-box">
-                <img src="images/Tesla model 3.webp" alt="Tesla Model 3">
+                <img src="images/Tesla_model_3.webp" alt="Tesla Model 3">
                 <h3>Name: Tesla Model 3</h3>
                 <p>Year Of Release: 2018</p>
                 <p>Range: 358-mile EPA range</p>
             </div>
             <div class="ev-box">
-                <img src="images/Ford Mustang Mach-E.webp" alt="Ford Mustang Mach-E">
+                <img src="images/Ford_Mustang_Mach-E.webp" alt="Ford Mustang Mach-E">
                 <h3>Name: Ford Mustang Mach-E</h3>
                 <p>Year Of Release: 2019 </p>
                 <p>Range: 312 miles</p>
             </div>
             <div class="ev-box later">
-                <img src="images/Tesla model Y.webp" alt="Hyundai IONIQ 5">
+                <img src="images/Hyundai-Toyota-electric-vehicles-2.webp" alt="Hyundai IONIQ 5">
                 <h3>Name: Hyundai IONIQ 5</h3>
                 <p>Year Of Release: 2020</p>
                 <p>Range: 303 miles EPA</p>
             </div>
             <div class="ev-box later">
-                <img src="images/Chevy Bolt EV.jpeg" alt="Chevy Bolt">
+                <img src="images/Chevy_Bolt_EV.jpeg" alt="Chevy Bolt">
                 <h3>Name: Chevy Bolt</h3>
                 <p>Year Of Release: 2022 </p>
                 <p>Range: 259-mile EPA range</p>
@@ -111,7 +111,7 @@
             <div class="exco-box">
                 <img src="images/francis.webp" alt="EVC president">
                 <h3>Chinemerem Onyenkeyadi ~ President</h3>
-                <p 3>"Driving change one charge at a time, as we spark innovation and electrify the
+                <p>"Driving change one charge at a time, as we spark innovation and electrify the
                     future together"</p>
             </div>
             <div class="exco-box">
@@ -153,8 +153,8 @@
         <a href="#">About Us</a>
         <a href="#">Join Us</a>
         <div class="social-box">
-            <a href="#"><img src="images/x logo.png" alt="twitter logo"></a>
-            <a href="#"><img src="images/facebook logo.png" alt="facebook logo"></a>
+            <a href="#"><img src="images/x_logo.png" alt="twitter logo"></a>
+            <a href="#"><img src="images/facebook_logo.png" alt="facebook logo"></a>
             <a href="#"><img src="images/download.jpg" alt="twitter logo"></a>
         </div>
 
